<resources>
    <string name="app_name">Alpha Health Assistant</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_bmi">BMI Calculater</string>
    <string name="menu_wreminder">Water Reminder</string>
    <string name="menu_caloriecal">Food Calorie Calculater</string>
    <string name="menu_calorieburn">Calorie Burner</string>

    <string name="wtab_reminder">Calorie Burner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Calculator</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Healthy Tips</string>
    <string name="bmiCal">BMI Calculator</string>
    <string name="cal">Calculate</string>
    <string name="Date">Date</string>
    <string name="bmi">BMI</string>
    <string name="del">Delete</string>
    <string name="overWeightTips">You Are OverWeight !</string>
    <string name="overWeightTip">1.Eat more fruit, vegetables, nuts, and whole grains.</string>
    <string name="overWeightTip2">2.Exercise, even moderately, for at least 30 minutes a day.</string>
    <string name="overWeightTip3">3.Cut down your consumption of fatty and sugary foods.</string>
    <string name="overWeightTip4">4.Use vegetable-based oils rather than animal-based fats.</string>


    <string name="new_app_name">Training Plan</string>
    <string name="beginner_exercise_window">ABS workouts</string>
    <string name="training_plan_text_view">Training Plan</string>
    <string name="report_window">Report</string>
    <string name="history_window">History</string>
    <string name="textView10">BEGINNER</string>
    <string name="exerciseListTextView">Exercise List</string>
    <string name="finalView">GREAT Job</string>
    <string name="selectDay_TextView">Select a Day</string>
    <string name="previousworkoutTv">Previous workout</string>
    <string name="todayworkouts">Today Workouts</string>
    <string name="todaykcal">Today kcal</string>
    <string name="weight">Weight</string>
    <string name="Noofworkouts">Number Of Workouts</string>
    <string name="totKcal">Total Kcal</string>
    <string name="ok">OKAY</string>
    <string name="noOfexcercises">Number of Exercises</string>

    <string name="DailyMeals">Daily Meals</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="food">Food Name</string>
    <string name="Selectmeal">Select Meals</string>
    <string name="title_activity_date_picker">DatePicker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_caloriecal_date_pick">CaloriecalDatePick</string>
    <string name="title_activity_caloriecal_history">CaloriecalHistory</string>
    <string name="title_activity_caloriecal_daily_report">CaloriecalDailyReport</string>
    <string name="title_activity_caloriecal_daily_meal">CaloriecalDailyMeal</string>
    <string name="title_activity_caloriecal_first_breakfast">CaloriecalFirstBreakfast</string>
    <string name="hoppers">Hoppers</string>
    <string name="stringhoppers">String Hoppers</string>
    <string name="redrice">Red Rice</string>
    <string name="add">add</string>
    <string name="timeLable">Time</string>
    <string name="stepslable">Steps</string>
    <string name="stepsLable">Steps</string>
    <string name="absEx01">Jumping jacks</string>
    <string name="absEx02">Abdominal Crunchest</string>
    <string name="absEx03">Mountain Climber</string>
    <string name="absEx04">Leg raises</string>
    <string name="absEx05">Plank</string>
    <string name="hint">Enter rounded time</string>
    <string name="armEx01">Arm Raise</string>
    <string name="armEx02">Side Arm Raise</string>
    <string name="armEx03">Triceps Dips</string>
    <string name="armEx04">Push-up</string>
    <string name="armEx05">Punches</string>
    <string name="armEx06">Diamond Push-ups</string>
    <string name="detailButton">details</string>
    <string name="finalButton">report</string>
    <string name="absLAble">ABS</string>
    <string name="chastLable">CHEST</string>
    <string name="legLable">LEG</string>
    <string name="shoulderLable">SHOULDER</string>
    <string name="armLable">ARM</string>
    <string name="title">BEGINNER EXERCISES CATEGORY</string>
    <string name="titleBeginner">Exercise category</string>
    <string name="chestEx02">Push-ups</string>
    <string name="chestEx03">Wide arm push-ups</string>
    <string name="chestEx04">Incline pushups</string>
    <string name="chestEx05">Cobra stretch</string>
    <string name="legEx01">Side hop</string>
    <string name="legEx02">Squats</string>
    <string name="legEx005">Backward Lunge</string>
    <string name="legEx06">Squats</string>
    <string name="report">report</string>
    <string name="reportBeginner">beginner</string>
    <string name="reportbutton2">Intermediate</string>
    <string name="reportButton3">pro</string>
    <string name="beginnerLable">Beginner</string>
    <string name="intermediateLable">Intermediate</string>
    <string name="prolable">Pro</string>
    <string name="WeightCurrent">current weight</string>
    <string name="CategoryButton">CAtegory</string>
    <string name="saveButton">save</string>

</resources>