<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_wreminder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_wreminder" />
        <item
            android:id="@+id/nav_caloriecal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_caloriecal" />
        <item
            android:id="@+id/nav_calorieburn"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calorieburn" />


    </group>
</menu>