<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAA0">

    <TextView
        android:id="@+id/textView"
        android:layout_width="204dp"
        android:layout_height="78dp"
        android:layout_marginLeft="100px"
        android:text="@string/DailyMeals"
        android:textAllCaps="false"
        android:textColor="#131212"
        android:textSize="36sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/pickadayBtn"
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:layout_marginLeft="600px"
        android:layout_marginTop="300px"
        android:background="#2FAC27"
        android:text="Pick A Day" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="255dp"
        android:layout_marginTop="92dp" />

    <ImageButton
        android:id="@+id/breakfastBtn"
        android:layout_width="273dp"
        android:layout_height="104dp"
        android:layout_marginLeft="200px"
        android:layout_marginTop="600px"
        android:src="@drawable/breakfast" />

    <ImageButton
        android:id="@+id/lunchBtn"
        android:layout_width="273dp"
        android:layout_height="106dp"
        android:layout_marginLeft="200px"
        android:layout_marginTop="1200px"
        android:src="@drawable/lunch" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="189dp"
        android:layout_height="56dp"
        android:layout_marginLeft="300px"
        android:layout_marginTop="700px"
        android:text="@string/breakfast"
        android:textAlignment="center"
        android:textColor="#F3EBEB"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_marginLeft="300px"
        android:layout_marginTop="1300px"
        android:text="@string/lunch"
        android:textAlignment="center"
        android:textColor="#FAF7F7"
        android:textSize="36sp" />

    <ImageButton
        android:id="@+id/DinnerBtn"
        android:layout_width="273dp"
        android:layout_height="116dp"
        android:layout_marginLeft="200px"
        android:layout_marginTop="1800px"
        android:src="@drawable/dinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="197dp"
        android:layout_height="64dp"
        android:layout_marginLeft="300px"
        android:layout_marginTop="1900px"
        android:text="@string/Dinner"
        android:textAlignment="center"
        android:textColor="#F6F0F0"
        android:textSize="36sp" />


</FrameLayout>